@@ -877,6 +877,7 @@ setting.slagsounddistance.name = Play Warning Sound For Potential Slag Griefs Wi
 setting.breakwarnings.name = Notify When Special Blocks Are Broken[lightgray] (mostly source blocks)[]
 setting.powersplitwarnings.name = Notify When Power Is Split[lightgray] (WIP: will add a minimum building count later)[]
 setting.viruswarnings.name = Notify When Logic "Viruses" Are Built
+setting.commandwarnings.name = Notify When Command Centers Are Configured
 setting.removecorenukes.name = Automatically Remove Reactors Built Within[gray] 20[] Blocks Of Core
 
 setting.chat.category = Messaging & Online
