@@ -79,7 +79,7 @@ public class UnitPicker extends BaseDialog {
     private void setup(){
         Events.on(EventType.UnitChangeEvent.class, event -> { // TODO: Test Player.lastReadUnit also get rid of this dumb ping prediction stuff
             if (found == null) return;
-            if (event.unit.team == player.team() && event.player != player) {
+            if (!event.player.isLocal() && event.unit.team == player.team()) {
                 Unit find = Units.closest(player.team(), player.x, player.y, u -> !u.isPlayer() && u.type == found && !u.dead);
                 if (find != null) {
                     Call.unitControl(player, find);
