@@ -7,6 +7,13 @@
  * Fix for fire particles getting out of control, no longer spawns more particles at lower fps, the slider is still there if you want it
  * Buildpath will only draw up to 300 plans at a time to prevent massive lag when using !builder broken on large maps
  * Added a button to unlock all steam achievements (steam only)
+ * V to respawn at core even if already a core unit
+ * Build plans are kept when switching units (clicking core, pressing v, and death too!)
+ * Fixed an issue where weather could be impossible to enable
+ * Muted weather when disabled
+ * Added command center configuration warnings, toggleable with a setting
+ * Removed !fuel command as it's no longer needed
+ * Added !cc to quickly change the config of a command center
  * Other various improvements
 
 # Version 6.6.0
